<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/worddaycardview"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="VideoViewActivity"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#86CEB8">

                    <RelativeLayout
                        android:id="@+id/name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="40dp">

                        <TextView
                            android:id="@+id/word"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Book"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/worddatstring"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/word"
                            android:layout_marginTop="5dp"
                            android:text="@string/word_of_the_day"
                            android:textColor="@color/white" />

                        <!--
               android:background="@drawable/cardviewedge"-->

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_below="@id/worddatstring"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/ic_baseline_play_circle"
                            app:tint="#0E5E73"
                            tools:ignore="ContentDescription">

                        </ImageView>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp">

                        <ImageView
                            android:layout_width="220dp"
                            android:layout_height="145dp"
                            android:src="@drawable/womensignimage"
                            tools:ignore="ContentDescription">

                        </ImageView>
                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtcommunicationmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/worddaycardview"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/communication_mode"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/signtotextcardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtcommunicationmode"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="signtotext"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue">

                    <RelativeLayout
                        android:id="@+id/txtsigntotext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_to_text_translation"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold">

                        </TextView>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtsigntotext"
                        android:layout_marginStart="100dp"
                        android:layout_marginBottom="20dp">

                        <ImageView
                            android:id="@+id/imgsignsicon"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/signs_icon"
                            app:tint="#0E5E73"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:id="@+id/imgarrowicon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/imgsignsicon"
                            android:src="@drawable/arrow_icon"
                            app:tint="#F1F0F0"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_toEndOf="@id/imgarrowicon"
                            android:src="@drawable/abc_icon"
                            app:tint="#0E5E73"
                            tools:ignore="ContentDescription" />


                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/texttosigncardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signtotextcardview"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="texttosign"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue">

                    <RelativeLayout
                        android:id="@+id/txttexttosign1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_to_sign_translation"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold">

                        </TextView>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txttexttosign1"
                        android:layout_marginStart="100dp"
                        android:layout_marginBottom="20dp">

                        <ImageView
                            android:id="@+id/imgabcicon1"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/abc_icon"
                            app:tint="#0E5E73"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:id="@+id/imgarrowicon1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/imgabcicon1"
                            android:src="@drawable/arrow_icon"
                            app:tint="#F1F0F0"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_toEndOf="@id/imgarrowicon1"
                            android:src="@drawable/signs_icon"
                            app:tint="#0E5E73"
                            tools:ignore="ContentDescription" />


                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtcategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/texttosigncardview"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="Category"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtcategory"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="alphabets"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#86CEB8">

                        <RelativeLayout
                            android:id="@+id/txtAlphabet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgalphabetimageview"
                            android:layout_marginBottom="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Alphabet"
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                android:textStyle="bold">

                            </TextView>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/imgalphabetimageview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/abc_icon_category"
                                android:textSize="40dp"
                                android:textColor="#0E5E73"
                                tools:ignore="ContentDescription" />


                        </RelativeLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="numbers"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#86CEB8">

                        <RelativeLayout
                            android:id="@+id/txtNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgnumber"
                            android:layout_marginBottom="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Numbers"
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                android:textStyle="bold">

                            </TextView>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/imgnumber"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/number_icon_bg_circle"
                            android:layout_centerHorizontal="true">

                            <TextView
                                android:id="@+id/imgnumbertextview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="#"
                                android:textColor="@color/white"
                                android:textSize="40dp" />


                        </RelativeLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>